[gd_scene load_steps=4 format=3 uid="uid://oxhpqeeom78i"]

[ext_resource type="Script" path="res://Games/FlappyGodot/components/menus/generic/menu.gd" id="1_crqy3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_677du"]
bg_color = Color(0.0972867, 0.270793, 0.212636, 1)
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0400749, 0.149036, 0.112553, 1)
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="LabelSettings" id="LabelSettings_2peax"]
font_size = 64

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_crqy3")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -61.5
offset_right = 92.0
offset_bottom = 61.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_677du")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="VBox" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
text = "FlappyGodot"
label_settings = SubResource("LabelSettings_2peax")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 8

[node name="Start" type="Button" parent="PanelContainer/MarginContainer/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="Restart" type="Button" parent="PanelContainer/MarginContainer/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Restart"

[node name="Quit" type="Button" parent="PanelContainer/MarginContainer/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBox/HBox/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBox/HBox/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBox/HBox/Quit" to="." method="_on_quit_pressed"]
